--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-	"name": "wcesium",
-	"version": "1.0.0",
-	"description": "A rollup +cesium tool",
-	"main": "dist/wcesium.umd.js",
-	"module": "dist/wcesium.esm.js",
-	"unpkg": "dist/wcesium.min.js",
-	"scripts": {
-		"build": "npm run build:browser && npm run build:es && npm run build:umd",
-		"build:browser": "rollup --config build/rollup.config.browser.js",
-		"build:es": "rollup --config build/rollup.config.es.js",
-		"build:umd": "rollup --config build/rollup.config.umd.js",
-		"dev": "cross-env NODE_ENV=development rollup --config build/rollup.config.es.js --watch"
-	},
-	"keywords": [
-		"cesium",
-		"wcesium",
-		"webgis",
-		"gis"
-	],
-	"author": "wangchaoxu",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/wangchaoxu/wcesium.git"
-	},
-	"bugs": {
-		"url": "https://github.com/wangchaoxu/wcesium/issues"
-	},
-	"homepage": "https://github.com/wangchaoxu/wcesium#readme",
-	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-plugin-module-resolver": "^3.2.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-stage-3": "^6.24.1",
-		"clean-css": "^4.2.1",
-		"cross-env": "^5.2.0",
-		"rollup": "^1.16.7",
-		"rollup-plugin-babel": "^3.0.0",
-		"rollup-plugin-commonjs": "^10.0.1",
-		"rollup-plugin-css-only": "^1.0.0",
-		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-uglify-es": "0.0.1",
-		"rollup-plugin-vue": "^5.0.1",
-		"vue": "^2.6.10",
-		"vue-template-compiler": "^2.6.10"
-	}
+  "name": "wcesium",
+  "version": "1.0.0",
+  "description": "A cesium tools",
+  "main": "dist/wcesium.umd.js",
+  "module": "dist/wcesium.esm.js",
+  "unpkg": "dist/wcesium.min.js",
+  "scripts": {
+    "build": "npm run build:browser && npm run build:es && npm run build:umd",
+    "build:browser": "rollup --config build/rollup.config.browser.js",
+    "build:es": "rollup --config build/rollup.config.es.js",
+    "build:umd": "rollup --config build/rollup.config.umd.js",
+    "doc": "jsdoc src/wcesium -d doc",
+    "dev": "cross-env NODE_ENV=development rollup --config build/rollup.config.es.js --watch"
+  },
+  "keywords": [
+    "cesium",
+    "wcesium",
+    "webgis",
+    "gis"
+  ],
+  "author": "zulezhe",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zulezhe/wcesium.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zulezhe/wcesium/issues"
+  },
+  "homepage": "https://github.com/zulezhe/wcesium#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "clean-css": "^4.2.1",
+    "cross-env": "^5.2.0",
+    "jsdoc": "^3.6.6",
+    "rollup": "^1.16.7",
+    "rollup-plugin-babel": "^3.0.0",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "rollup-plugin-vue": "^5.0.1"
+  }
 }
